--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "deploy": "cdk deploy",
+    "destroy": "cdk destroy",
+    "bootstrap": "cdk bootstrap --profile=default"
   },
   "devDependencies": {
     "@types/jest": "^29.5.8",
     "@types/node": "20.9.0",
     "aws-cdk": "2.106.1",
+    "esbuild": "^0.19.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
