--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "typescript": "~5.2.2"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.454.0",
+    "@aws-sdk/lib-dynamodb": "^3.454.0",
     "@types/aws-lambda": "^8.10.126",
     "aws-cdk-lib": "2.106.1",
     "aws-lambda": "^1.0.7",
