--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "typescript": "~5.2.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.465.0",
     "@aws-sdk/lib-dynamodb": "^3.454.0",
+    "@aws-sdk/s3-request-presigner": "^3.465.0",
     "@types/aws-lambda": "^8.10.126",
     "@types/uuid": "^9.0.7",
     "aws-cdk-lib": "2.106.1",
