--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "~5.2.2"
   },
   "dependencies": {
+    "@aws-cdk/aws-iam": "^1.204.0",
     "@aws-sdk/client-s3": "^3.465.0",
     "@aws-sdk/lib-dynamodb": "^3.454.0",
     "@aws-sdk/s3-request-presigner": "^3.465.0",
@@ -32,6 +33,7 @@
     "aws-cdk-lib": "2.106.1",
     "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
+    "csv-parse": "^5.5.2",
     "dynamo-converters": "^8.0.6",
     "source-map-support": "^0.5.21",
     "tsx": "^4.5.0"
