--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "devDependencies": {
     "@types/jest": "^29.5.8",
     "@types/node": "20.9.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "aws-cdk": "2.106.1",
     "esbuild": "^0.19.5",
+    "eslint": "^8.55.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
@@ -26,6 +29,8 @@
   "dependencies": {
     "@aws-cdk/aws-iam": "^1.204.0",
     "@aws-sdk/client-s3": "^3.465.0",
+    "@aws-sdk/client-sns": "^3.470.0",
+    "@aws-sdk/client-sqs": "^3.470.0",
     "@aws-sdk/lib-dynamodb": "^3.454.0",
     "@aws-sdk/s3-request-presigner": "^3.465.0",
     "@types/aws-lambda": "^8.10.126",
